--- a/index.html
+++ b/index.html
@@ -163,7 +163,87 @@
 </ul>
 
 <p>Wicket is released under the <a href='http://www.apache.org/licenses/LICENSE-2.0.html'>Apache License, Version 2.0</a>.</p>
+<h1>Security announcement: CVE-2011-2712</h1>
+<p>A XSS vulnerability has been found in Apache Wicket version 1.4. This is solved in Apache Wicket 1.4.18. Please upgrade your applications to this release. Wicket versions 1.3.x and 1.5.x are not affected by this vulnerability. <a href='2011/08/23/cve-2011-2712.html'>More information</a></p>
 
+<h1 id='apache_wicket_releases_wicket_15'><a href='/2011/09/07/wicket-1.5-released.html'>Apache Wicket releases Wicket 1.5</a></h1>
+<p>The Apache Wicket team is proud to announce the immediate availability of the newest release of their component oriented open source Java web framework. Apache Wicket 1.5 has been in development for the last two years and brings many improvements over previous versions.</p><h2 id='downloading_apache_wicket_15'>Downloading Apache Wicket 1.5</h2><p>You can download the release here: <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.0'>http://www.apache.org/dyn/closer.cgi/wicket/1.5.0</a></p><p>Or use this in your Maven POM to upgrade to the new version:</p><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
+    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
+    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.5.0<span class='nt'>&lt;/version&gt;</span>
+<span class='nt'>&lt;/dependency&gt;</span>
+</code></pre>
+</div><p>Please note that Wicket&#8217;s main artifact ID has been renamed to <code>wicket-core</code>.</p><p>You will need to upgrade all modules (i.e. wicket, wicket-extensions, wicket-ioc, wicket-spring, etc) to 1.5.0. <strong>It is not possible to mix previous versions of Wicket with modules of this release.</strong></p><h2 id='most_notable_changes'>Most notable changes</h2><p>With this release the Wicket team has revised many of its internals. A short list:</p><ul>
+<li>HTML5 components added: <code>EmailTextField</code>, <code>NumberTextField</code>, <code>UrlTextField</code> and <code>RangeTextField</code></li>
+
+<li>New inter-component events (explained below)</li>
+
+<li>Minimum required servlet API is servlet-api 2.5</li>
+
+<li>All standard validators now extend <code>Behavior</code> to allow for client side validations</li>
+
+<li><code>IBehavior</code> has been removed and <code>AbstractBehavior</code> has been deprecated, you should now extend <code>Behavior</code> instead</li>
+
+<li>Simplified the <a href='https://cwiki.apache.org/WICKET/requestcycle-in-wicket-15.html'>request cycle processing</a> and made it more extensible</li>
+
+<li>URL handling is now in one place</li>
+
+<li>Wicket&#8217;s rendering code has been greatly simplified</li>
+
+<li>Improved browser <a href='https://cwiki.apache.org/WICKET/caching-in-wicket-15.html'>caching support</a></li>
+
+<li>ClientSideImageMap replaces old ImageMap</li>
+
+<li>Better support for running behind proxies with <code>x-forwarded-for</code> header</li>
+
+<li><a href='https://cwiki.apache.org/WICKET/requestcycle-in-wicket-15.html'>Request cycle listeners</a> make it easier to integrate frameworks in your Wicket application</li>
+
+<li>Consistent naming: methods with <code>Javascript</code> in the name have been renamed to use proper capitalization: <code>JavaScript</code></li>
+
+<li>Switching to HTTPS is as simple as configuring a new root mapper to make Wicket HTTPS aware and annotating a page with @RequireHttps</li>
+</ul><p>A longer list of changes and improvements can be found in our <a href='http://s.apache.org/wicket-1.5-migration'>migration guide</a>.</p><h3 id='intercomponent_events'>Inter-component events</h3><p>Wicket 1.5 offers a simple, yet flexible, way for component to communicate with each other in a decoupled manner. The two major interfaces that facilitate this are:</p><div class='highlight'><pre><code class='java'><span class='cm'>/**</span>
+<span class='cm'> * Objects that can send events</span>
+<span class='cm'> */</span>
+<span class='kd'>public</span> <span class='kd'>interface</span> <span class='nc'>IEventSource</span> <span class='o'>{</span>
+    <span class='o'>&lt;</span><span class='n'>T</span><span class='o'>&gt;</span> <span class='kt'>void</span> <span class='n'>send</span><span class='o'>(</span><span class='n'>IEventSink</span> <span class='n'>sink</span><span class='o'>,</span> <span class='n'>Broadcast</span> <span class='n'>broadcast</span><span class='o'>,</span> <span class='n'>T</span> <span class='n'>payload</span><span class='o'>);</span>
+<span class='o'>}</span>
+</code></pre>
+</div><p>and</p><div class='highlight'><pre><code class='java'><span class='cm'>/**</span>
+<span class='cm'> * Objects that can receive events</span>
+<span class='cm'> */</span>
+<span class='kd'>public</span> <span class='kd'>interface</span> <span class='nc'>IEventSink</span>
+<span class='o'>{</span>
+    <span class='cm'>/**</span>
+<span class='cm'>     * Called when an event is sent to this sink</span>
+<span class='cm'>     */</span>
+    <span class='kt'>void</span> <span class='nf'>onEvent</span><span class='o'>(</span><span class='n'>IEvent</span><span class='o'>&lt;?&gt;</span> <span class='n'>event</span><span class='o'>);</span>
+<span class='o'>}</span>
+</code></pre>
+</div><p>The classes that implement these interfaces, and can thus participate in the event mechanism are: <code>Component</code>, <code>RequestCycle</code>, <code>Session</code>, and <code>Application</code>.</p><p>The mechanism allows for different event broadcast methods defined here:</p><div class='highlight'><pre><code class='java'><span class='cm'>/**</span>
+<span class='cm'> * Defines the event broadcast type.</span>
+<span class='cm'> */</span>
+<span class='kd'>public</span> <span class='kd'>enum</span> <span class='n'>Broadcast</span> <span class='o'>{</span>
+    <span class='n'>BREADTH</span><span class='o'>,</span>
+    <span class='n'>DEPTH</span><span class='o'>,</span>
+    <span class='n'>BUBBLE</span><span class='o'>,</span>
+    <span class='n'>EXACT</span><span class='o'>;</span>
+<span class='o'>}</span>
+</code></pre>
+</div><p>There is an example in wicket-examples which demonstrates the usage of this.</p><p>Applications can register custom event dispatchers in <code>FrameworkSettings</code>; the dispatchers can be used to build custom event delivery mechanisms. For example a custom <code>IEventDispatcher</code> mechanism can route events to annotated methods, for example:</p><div class='highlight'><pre><code class='java'><span class='kd'>public</span> <span class='kd'>class</span> <span class='nc'>MyComponent</span> <span class='kd'>extends</span> <span class='n'>Component</span> <span class='o'>{</span>
+    <span class='nd'>@OnEvent</span>
+    <span class='kd'>private</span> <span class='kt'>void</span> <span class='nf'>onUserAdded</span><span class='o'>(</span><span class='n'>UserAddedEvent</span> <span class='n'>event</span><span class='o'>)</span> <span class='o'>{...}</span>
+<span class='o'>}</span>
+</code></pre>
+</div><p>where <code>UserAddedEvent</code> is the event payload object.</p><p>The default <code>Component#onEvent</code> method will be called even if custom dispatchers are registered.</p><p>A default event is raised whenever Wicket begins to create an AJAX response. The payload of the event is the <code>AjaxRequestTarget</code> used for event. Sample implementation:</p><div class='highlight'><pre><code class='java'><span class='c1'>// component that always adds itself to the ajax response</span>
+<span class='kd'>public</span> <span class='kd'>class</span> <span class='nc'>MyComponent</span> <span class='kd'>extends</span> <span class='n'>Component</span> <span class='o'>{</span>
+    <span class='kd'>public</span> <span class='kt'>void</span> <span class='nf'>onEvent</span><span class='o'>(</span><span class='n'>IEvent</span> <span class='n'>event</span><span class='o'>)</span> <span class='o'>{</span>
+        <span class='k'>if</span> <span class='o'>(</span><span class='n'>event</span><span class='o'>.</span><span class='na'>getPayload</span><span class='o'>()</span> <span class='k'>instanceof</span> <span class='n'>AjaxRequestTarget</span><span class='o'>)</span> <span class='o'>{</span>
+            <span class='o'>((</span><span class='n'>AjaxRequestTarget</span><span class='o'>)</span><span class='n'>event</span><span class='o'>.</span><span class='na'>getPayload</span><span class='o'>()).</span><span class='na'>add</span><span class='o'>(</span><span class='k'>this</span><span class='o'>);</span>
+         <span class='o'>}</span>
+    <span class='o'>}</span>
+<span class='o'>}</span>
+</code></pre>
+</div>
 <h1 id='wicket_15rc7_released'><a href='/2011/08/28/1.5-RC7-released.html'>Wicket 1.5-RC7 released</a></h1>
 <p>The Wicket Team is proud to introduce the seventh Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and improvements done between 1.5-RC5.1 and 1.5-RC7</p><p>More detailed migration notes are available on our <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migrate to 1.5 Wiki Page</a></p><p>Release Artifacts:</p><ul>
 <li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-RC7'>Subversion tag</a></li>
@@ -181,14 +261,13 @@
 </code></pre>
 </div><ul>
 <li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-RC7'>full distribution</a> (including source)</li>
-</ul>
-<h1 id='cve20112712__apache_wicket_xss_vulnerability'><a href='/2011/08/23/cve-2011-2712.html'>CVE-2011-2712 - Apache Wicket XSS vulnerability</a></h1>
-<p>Vendor: The Apache Software Foundation</p><p>Versions Affected: Apache Wicket 1.4.x</p><p>Apache Wicket 1.3.x and 1.5-RCx are not affected</p><p>Description: With multi window support application configuration and special query parameters it is possible to execute any kind of JavaScript on a site running with the affected versions.</p><p>Mitigation: Either disable multi window support with</p><p>MyApp.java</p><div class='highlight'><pre><code class='xml'>public void init() {
-    super.init();
-    getPageSettings.setAutomaticMultiWindowSupport(false);
-}
-</code></pre>
-</div><p>or upgrade to <a href='http://wicket.apache.org/2011/08/09/wicket-1.4.18-released.html'>Apache Wicket 1.4.18</a> or <a href='http://wicket.apache.org/2011/06/25/wicket-1.5-RC5.1-released.html'>Apache Wicket 1.5-RC5.1</a></p><p>Credit: This issue was discovered by ﻿Sven Krewitt of TÜV Rheinland i-sec GmbH.</p><h1>Older news items</h1><ul>
+</ul><h1>Older news items</h1><ul>
+
+
+<li>
+	<a href='/2011/08/23/cve-2011-2712.html'>CVE-2011-2712 - Apache Wicket XSS vulnerability</a> - <span>23 Aug 2011</span><br />
+	Vendor: The Apache Software Foundation Versions Affected: Apache Wicket 1.4.x Apache Wicket 1.3.x and 1.5-RCx are not affected Description: With multi window support application configuration...
+	<a href='/2011/08/23/cve-2011-2712.html'>more</a></li>
 
 
 <li>
@@ -243,12 +322,6 @@
 	<a href='/2011/02/25/wicket-1.4.16-released.html'>Wicket 1.4.16 released</a> - <span>25 Feb 2011</span><br />
 	This is sixteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
 	<a href='/2011/02/25/wicket-1.4.16-released.html'>more</a></li>
-
-
-<li>
-	<a href='/2011/01/22/wicket-1.5-RC1-released.html'>Wicket 1.5-RC1 released</a> - <span>22 Jan 2011</span><br />
-	The Wicket Team is proud to introduce the first Release Candidate in Wicket 1.5 series. The 1.5 series provides the following major improvements: A more...
-	<a href='/2011/01/22/wicket-1.5-RC1-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
