--- a/start/download.html
+++ b/start/download.html
@@ -157,22 +157,16 @@
 <ul>
 <li><strong>Latest stable release</strong>: <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.0'>1.5.0</a></li>
 
-<li><strong>Last 1.3.x release</strong>: <a href='http://archive.apache.org/dist/wicket/1.3.7'>1.3.7</a></li>
+<li><strong>Last 1.4.x release</strong>: <a href='http://archive.apache.org/dist/wicket/1.4.18'>1.4.18</a></li>
 
 <li><strong>Archived releases</strong>: <a href='http://archive.apache.org/dist/wicket'>http://archive.apache.org/dist/wicket</a></li>
 </ul>
 
-<p>We recommend you <a href='quickstart.html'>start</a> with our latest 1.4 release. If you are migrating an existing application from Wicket 1.3 to 1.4, you may find the <a href='http://cwiki.apache.org/WICKET/migrating-to-wicket-14.html'>migration guide</a> invaluable.</p>
+<p>We recommend you <a href='quickstart.html'>start</a> with our latest 1.5 release. If you are migrating an existing application from Wicket 1.4 to 1.5, you may find the <a href='http://cwiki.apache.org/WICKET/migrating-to-wicket-15.html'>migration guide</a> invaluable.</p>
 
-<p><strong>Apache Wicket 1.4.x lines require JDK 1.5 or newer</strong></p>
+<p>Apache Wicket 1.5.x require JDK 1.5 or newer</p>
 
-<p><strong>Apache Wicket 1.3.x lines require JDK 1.4 or newer</strong>, although there are some non-core modules which take advantage of JDK 5 features.</p>
-
-<h2 id='important_note_about_logging_dependencies_for_130_and_later'>Important note about logging dependencies for 1.3.0 and later.</h2>
-
-<p>As of Wicket 1.3.0, Wicket uses the <a href='http://www.slf4j.org'>SLF4J</a> project for logging. SLF4J is similar to <a href='http://jakarta.apache.org/commons/logging'>commons-logging</a>, in that it allows libraries/frameworks like Wicket to avoid forcing a choice of logging framework on their users.</p>
-
-<p><strong>You cannot use Wicket without adding an SLF4J logging implementation to your classpath</strong>. Most people use <a href='http://logging.apache.org/log4j'>log4j</a>. If you do, just include <strong>slf4j-log4j12.jar</strong> on your classpath to get Wicket to use log4j too. If you want to use commons-logging or JDK14 logging or something else, please see the <a href='http://www.slf4j.org/faq.html'>SLF4J site</a> for more information.</p>
+<p>You cannot use Wicket without adding an SLF4J logging implementation to your classpath. Most people use <a href='http://logging.apache.org/log4j'>log4j</a>. If you do, just include <strong>slf4j-log4j12.jar</strong> on your classpath to get Wicket to use log4j too. If you want to use commons-logging or JDK14 logging or something else, please see the <a href='http://www.slf4j.org/faq.html'>SLF4J site</a> for more information.</p>
 
 <h2 id='maven_2'>Maven 2</h2>
 
