--- a/index.html
+++ b/index.html
@@ -170,6 +170,22 @@
 <h1>Security announcement: CVE-2011-2712</h1>
 <p>A XSS vulnerability has been found in Apache Wicket version 1.4. This is solved in Apache Wicket 1.4.18. Please upgrade your applications to this release. Wicket versions 1.3.x and 1.5.x are not affected by this vulnerability. <a href='2011/08/23/cve-2011-2712.html'>More information</a></p>
 
+<h1 id='wicket_151_released'><a href='/2011/09/29/wicket-1.5.1-released.html'>Wicket 1.5.1 released</a></h1>
+<p>This is the first maintenance release of the Wicket 1.5.x series. This release brings over 40 bug fixes and 15 improvements.</p><ul>
+<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5.1'>Subversion tag</a></li>
+
+<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?&amp;version=12315430&amp;projectId=12310561'>Changelog</a></li>
+
+<li>To use in Maven:</li>
+</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
+    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
+    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.5.1<span class='nt'>&lt;/version&gt;</span>
+<span class='nt'>&lt;/dependency&gt;</span>
+</code></pre>
+</div><ul>
+<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.1'>full distribution</a> (including source)</li>
+</ul>
 <h1 id='apache_wicket_releases_wicket_15'><a href='/2011/09/07/wicket-1.5-released.html'>Apache Wicket releases Wicket 1.5</a></h1>
 <p>The Apache Wicket team is proud to announce the immediate availability of the newest release of their component oriented open source Java web framework. Apache Wicket 1.5 has been in development for the last two years and brings many improvements over previous versions.</p><h2 id='downloading_apache_wicket_15'>Downloading Apache Wicket 1.5</h2><p>You can download the release here: <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.0'>http://www.apache.org/dyn/closer.cgi/wicket/1.5.0</a></p><p>Or use this in your Maven POM to upgrade to the new version:</p><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
     <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
@@ -247,25 +263,13 @@
     <span class='o'>}</span>
 <span class='o'>}</span>
 </code></pre>
-</div>
-<h1 id='wicket_15rc7_released'><a href='/2011/08/28/1.5-RC7-released.html'>Wicket 1.5-RC7 released</a></h1>
-<p>The Wicket Team is proud to introduce the seventh Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and improvements done between 1.5-RC5.1 and 1.5-RC7</p><p>More detailed migration notes are available on our <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migrate to 1.5 Wiki Page</a></p><p>Release Artifacts:</p><ul>
-<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-RC7'>Subversion tag</a></li>
+</div><h1>Older news items</h1><ul>
 
-<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12316657'>Changelog RC6</a></li>
 
-<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;version=12317645'>Changelog RC7</a></li>
-
-<li>To use in Maven:</li>
-</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
-    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
-    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>1.5-RC7<span class='nt'>&lt;/version&gt;</span>
-<span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><ul>
-<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-RC7'>full distribution</a> (including source)</li>
-</ul><h1>Older news items</h1><ul>
+<li>
+	<a href='/2011/08/28/1.5-RC7-released.html'>Wicket 1.5-RC7 released</a> - <span>28 Aug 2011</span><br />
+	The Wicket Team is proud to introduce the seventh Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and...
+	<a href='/2011/08/28/1.5-RC7-released.html'>more</a></li>
 
 
 <li>
@@ -320,12 +324,6 @@
 	<a href='/2011/02/25/wicket-1.5-rc2-released.html'>Wicket 1.5-rc2 released</a> - <span>25 Feb 2011</span><br />
 	The Wicket Team is proud to introduce the second Release Candidate in Wicket 1.5 series. See the changelog for the list of bug fixes and...
 	<a href='/2011/02/25/wicket-1.5-rc2-released.html'>more</a></li>
-
-
-<li>
-	<a href='/2011/02/25/wicket-1.4.16-released.html'>Wicket 1.4.16 released</a> - <span>25 Feb 2011</span><br />
-	This is sixteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
-	<a href='/2011/02/25/wicket-1.4.16-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
